--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,34 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;900&display=swap");
+@font-face {
+  font-display: swap;
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 300;
+  src: url("../fonts/Poppinspoppins-v22-latin-300.woff2") format("woff2");
+}
+
+@font-face {
+  font-display: swap;
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 400;
+  src: url("../fonts/Poppinspoppins-v22-latin-regular.woff2") format("woff2");
+}
+
+@font-face {
+  font-display: swap;
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 600;
+  src: url("../fonts/Poppinspoppins-v22-latin-600.woff2") format("woff2");
+}
+
+@font-face {
+  font-display: swap;
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 900;
+  src: url("../fonts/Poppinspoppins-v22-latin-900.woff2") format("woff2");
+}
 
 :root {
   --color-primary-ligtht: #faf4ea;
@@ -13,6 +43,7 @@ body {
   color: var(--color-primary-dark);
   background-color: var(--color-primary-ligtht);
   font-size: 18px;
+  line-height: 1.5;
   margin: 0px;
   font-family: "Poppins", sans-serif;
   box-sizing: border-box;
@@ -49,6 +80,7 @@ header,
 footer {
   margin: 0px;
   padding: 0px;
+  line-height: 1.5;
 }
 
 h1 {
@@ -113,6 +145,7 @@ header > .wrapper {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  gap: 24px;
 }
 
 .header-menu > ul {
@@ -120,6 +153,7 @@ header > .wrapper {
   flex-direction: row;
   gap: 64px;
   justify-content: space-between;
+  text-align: center;
 }
 
 ul a:hover {
@@ -337,6 +371,10 @@ footer {
   position: relative;
 }
 
+footer > .wrapper {
+  margin-bottom: 0px;
+}
+
 footer::before,
 footer::after {
   content: "";
@@ -375,7 +413,7 @@ footer > .wrapper {
 
 .social-icon {
   fill: var(--color-primary-ligtht);
-  padding-right: 22px;
+  margin-right: 22px;
 }
 
 .social-icon:hover {
